k8s/svc_ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx-internal
  name: {APP_NAME}
  namespace: {NAMESPACE}
spec:
  rules:
  - host: {FQDN}
    http:
      paths:
      - path: /{ING_PATH}
        backend:
          serviceName: {APP_NAME}
          servicePort: 80
          
---
apiVersion: v1
kind: Service
metadata:
  name: {APP_NAME}
  namespace: {NAMESPACE}
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: {APP_NAME}
  type: ClusterIP
